==> squadracorsepolito/dash/openBLT/Source/ARMCM4_XMC4/flash.c <==
#include "boot.h"                                /* bootloader generic header          */
#include "xmc_flash.h"                           /* Flash driver header                */
#define FLASH_INVALID_SECTOR            (0xff)
#define FLASH_INVALID_ADDRESS           (0xffffffff)
#define FLASH_WRITE_BLOCK_SIZE          (1024)
#define FLASH_TOTAL_SECTORS             (sizeof(flashLayout)/sizeof(flashLayout[0]))
#define FLASH_END_ADDRESS               (flashLayout[FLASH_TOTAL_SECTORS-1].sector_start + \
                                         flashLayout[FLASH_TOTAL_SECTORS-1].sector_size - 1)
#define BOOT_FLASH_VECTOR_TABLE_CS_OFFSET    (0x200)
#define FLASH_WRITE_PAGE_SIZE           (256)
#define FLASH_UNCACHED_BASE_ADDR        (0x0C000000U)
#define FLASH_CACHED_BASE_ADDR          (0x08000000U)
#define FLASH_ERASE_TIME_MAX_MS         (6600)
#define FLASH_PROGRAM_TIME_MAX_MS       (13)
#define BOOT_FLASH_CUSTOM_LAYOUT_ENABLE (0u)
#include "flash_layout.c"

static blt_bool FlashWriteBlock(tFlashBlockInfo *block)
{
  blt_int32u page_cnt;
  blt_addr   page_addr;
  blt_int8u *page_data;
  blt_int32u status;
  blt_int32u timeoutTime;
  blt_int32u byteIdx;

  /* check that address is actually within flash */
  if (FlashGetSector(block->base_addr) == FLASH_INVALID_SECTOR)
  {
    return BLT_FALSE;
  }

#if (BOOT_FLASH_CRYPTO_HOOKS_ENABLE > 0)
  #if (BOOT_NVM_CHECKSUM_HOOKS_ENABLE == 0)
  /* note that the bootblock is already decrypted in FlashWriteChecksum(), if the
   * internal checksum mechanism is used. Therefore don't decrypt it again.
   */
  if (block != &bootBlockInfo)
  #endif
  {
    /* perform decryption of the program data before writing it to flash memory. */
    if (FlashCryptoDecryptDataHook(block->data, FLASH_WRITE_BLOCK_SIZE) == BLT_FALSE)
    {
      return BLT_FALSE;
    }
  }
#endif

  /* program all pages in the block one by one */
  for (page_cnt=0; page_cnt< (FLASH_WRITE_BLOCK_SIZE/FLASH_WRITE_PAGE_SIZE); page_cnt++)
  {
    /* keep the watchdog happy */
    CopService();
    /* set page base address and pointer to page data */
    page_addr = block->base_addr + (page_cnt * FLASH_WRITE_PAGE_SIZE);
    page_data = &(block->data[page_cnt * FLASH_WRITE_PAGE_SIZE]);
    /* determine timeout time of the operation */
    timeoutTime = TimerGet() + FLASH_PROGRAM_TIME_MAX_MS;
    /* start erase operation */
    XMC_FLASH_ProgramPage((uint32_t *)page_addr, (uint32_t *)page_data);
    /* wait for the flash operation to complete */
    while (XMC_FLASH_IsBusy() > 0)
    {
      /* check for operation timeout */
      if (TimerGet() > timeoutTime)
      {
        /* timeout occurred. cannot continue */
        return BLT_FALSE;
      }
      /* keep the watchdog happy */
      CopService();
    }
    /* check the result */
    status = XMC_FLASH_GetStatus();
    /* reset the program finished flag */
    status &= ~XMC_FLASH_STATUS_PROGRAMMING_STATE;
    if (status != XMC_FLASH_STATUS_OK)
    {
      /* error occurred during flash erase, abort */
      return BLT_FALSE;

    }
    /* verify that the data was correctly programmed */
    for (byteIdx=0; byteIdx < FLASH_WRITE_PAGE_SIZE; byteIdx++)
    {
      if (*((volatile blt_int8u *)(page_addr+byteIdx)) != page_data[byteIdx])
      {
        /* program verification failed. abort */
        return BLT_FALSE;
      }
    }
  }

  /* still here so all is okay */
  return BLT_TRUE;
}

static blt_bool FlashEraseSectors(blt_int8u first_sector, blt_int8u last_sector)
{
  blt_int8u sector_cnt;
  blt_addr sectorBaseAddr;
  blt_int32u status;
  blt_int32u timeoutTime;

  /* validate the sector numbers */
  if (first_sector > last_sector)
  {
    return BLT_FALSE;
  }
  if ((first_sector < flashLayout[0].sector_num) || \
      (last_sector > flashLayout[FLASH_TOTAL_SECTORS-1].sector_num))
  {
    return BLT_FALSE;
  }

  /* erase all sectors one by one */
  for (sector_cnt=first_sector; sector_cnt<= last_sector; sector_cnt++)
  {
    /* keep the watchdog happy */
    CopService();

    /* submit the sector erase request by specifying its start address */
    sectorBaseAddr = FlashGetSectorBaseAddr(sector_cnt);
    if (sectorBaseAddr == FLASH_INVALID_ADDRESS)
    {
      /* not a valid sector address so abort */
      return BLT_FALSE;
    }
    /* determine timeout time of the operation */
    timeoutTime = TimerGet() + FLASH_ERASE_TIME_MAX_MS;
    /* start erase operation */
    XMC_FLASH_EraseSector((uint32_t *)sectorBaseAddr);
    /* wait for the flash operation to complete */
    while (XMC_FLASH_IsBusy() > 0)
    {
      /* check for operation timeout */
      if (TimerGet() > timeoutTime)
      {
        /* timeout occurred. cannot continue */
        return BLT_FALSE;
      }
      /* keep the watchdog happy */
      CopService();
    }
    /* check the result */
    status = XMC_FLASH_GetStatus();
    /* reset the erase finished flag */
    status &= ~XMC_FLASH_STATUS_ERASE_STATE;
    if (status != XMC_FLASH_STATUS_OK)
    {
      /* error occurred during flash erase, abort */
      return BLT_FALSE;

    }
  }

  /* still here so all went okay */
  return BLT_TRUE;
}
